--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 	</dependencies>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.7.1</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -46,7 +53,7 @@
 									<module name="jdk.compiler"/>
 									<module name="jdk.unsupported"/>
 								</link>
-								<tar compression="gzip" destfile="${project.build.directory}/lite-jdk.tgz" basedir="${project.build.directory}/lite-jdk"/>
+								<tar compression="gzip" destfile="${project.build.directory}/lite-jdk-${os.detected.classifier}.tgz" basedir="${project.build.directory}/lite-jdk"/>
 							</target>
 						</configuration>
 						<goals>
